#12 Set the visualisation title as an option in all the visualisation - kibana 5.2

--- a/src/core_plugins/kibana/public/visualize/editor/editor.html
+++ b/src/core_plugins/kibana/public/visualize/editor/editor.html
@@ -10,7 +10,7 @@
       >
         <span
           ng-show="savedVis.id"
-          ng-bind="savedVis.lastSavedTitle"
+          ng-bind="savedVis.composedTitle"
         ></span>
       </div>
 
