--- a/src/core_plugins/kbn_vislib_vis_types/public/editors/histogram.html
+++ b/src/core_plugins/kbn_vislib_vis_types/public/editors/histogram.html
@@ -11,3 +11,4 @@
 </div>
 <point-series-options></point-series-options>
 <vislib-basic-options></vislib-basic-options>
+<vislib-title-options></vislib-title-options>
