--- a/src/core_plugins/kbn_vislib_vis_types/public/editors/tile_map.html
+++ b/src/core_plugins/kbn_vislib_vis_types/public/editors/tile_map.html
@@ -99,6 +99,7 @@
 </div>
 
 <vislib-basic-options></vislib-basic-options>
+<vislib-title-options></vislib-title-options>
 
 <div class="vis-option-item form-group">
   <label>
