--- a/src/core_plugins/kibana/public/visualize/editor/editor.html
+++ b/src/core_plugins/kibana/public/visualize/editor/editor.html
@@ -4,9 +4,10 @@
     <!-- Transcluded elements. -->
     <div data-transclude-slots>
       <!-- Breadcrumbs. -->
+
       <bread-crumbs
         data-transclude-slot="topLeftCorner"
-        page-title="getVisualizationTitle()"
+        page-title="savedVis.composedTitle"
         use-links="true"
         omit-current-page="true"
         omit-pages="['edit']"
