[OptimData] Kibana #12 override visualisation title

--- a/src/core_plugins/kbn_vislib_vis_types/public/controls/gauge_options.html
+++ b/src/core_plugins/kbn_vislib_vis_types/public/controls/gauge_options.html
@@ -46,6 +46,7 @@
     </div>
   </div>
 
+  <vislib-title-options></vislib-title-options>
   <div class="kuiSideBarFormRow">
     <label class="kuiSideBarFormRow__label" for="addLegend">
       Show Legend
