--- a/src/core_plugins/kbn_vislib_vis_types/public/editors/heatmap.html
+++ b/src/core_plugins/kbn_vislib_vis_types/public/editors/heatmap.html
@@ -5,6 +5,7 @@
     </div>
   </div>
 
+  <vislib-title-options></vislib-title-options>
   <div class="kuiSideBarFormRow">
     <label class="kuiSideBarFormRow__label" for="addTooltip">
       Show Tooltips
