--- a/src/core_plugins/kbn_vislib_vis_types/public/editors/point_series.html
+++ b/src/core_plugins/kbn_vislib_vis_types/public/editors/point_series.html
@@ -7,6 +7,7 @@
       </div>
     </div>
 
+    <vislib-title-options></vislib-title-options>
     <div class="kuiSideBarFormRow">
       <label class="kuiSideBarFormRow__label" for="legendPosition">
         Legend Position
@@ -52,6 +53,7 @@
     </div>
 
     <vislib-grid></vislib-grid>
+    
   </div>
 
 </div>
