--- a/src/core_plugins/kibana/public/dashboard/panel/panel.html
+++ b/src/core_plugins/kibana/public/dashboard/panel/panel.html
@@ -3,10 +3,10 @@
     <span
       data-test-subj="dashboardPanelTitle"
       class="panel-title"
-      tooltip="{{::savedObj.title}}"
-      aria-label="{{:: 'Dashboard panel: ' + savedObj.title }}"
+      tooltip="{{::savedObj.vis.params.visTitle || savedObj.title}}"
+      aria-label="{{:: 'Dashboard panel: ' + savedObj.vis.params.visTitle || savedObj.title }}"
     >
-      {{::savedObj.title}}
+      {{::savedObj.vis.params.visTitle || savedObj.title}}
     </span>
     <div class="kuiMicroButtonGroup">
       <a
