--- a/src/core_plugins/kibana/public/dashboard/index.html
+++ b/src/core_plugins/kibana/public/dashboard/index.html
@@ -2,11 +2,12 @@
   <!-- Local nav. -->
   <kbn-top-nav name="dashboard" config="topNavMenu">
     <!-- Transcluded elements. -->
-    <div data-transclude-slots>
+    <div data-transclude-slots ng-show="chrome.getVisible() || showSearchBar">
       <!-- Title. -->
       <div
         data-transclude-slot="topLeftCorner"
         class="kuiLocalTitle"
+        ng-show="chrome.getVisible()"
       >
         <span
           ng-show="dash.id"
@@ -18,7 +19,7 @@
       <form
         data-transclude-slot="bottomRow"
         class="fullWidth"
-        ng-show="chrome.getVisible()"
+        ng-show="chrome.getVisible() || showSearchBar"
         role="form"
         name="queryInput"
         ng-submit="filterResults()"
