#16 add showSearchBar and showTimeFilter url options

--- a/src/ui/public/kbn_top_nav/kbn_top_nav.html
+++ b/src/ui/public/kbn_top_nav/kbn_top_nav.html
@@ -1,10 +1,11 @@
 <div
   class="kuiLocalNav"
-  ng-show="kbnTopNav.isVisible()"
+  ng-show="showTimeFilter || showSearchBar || kbnTopNav.isVisible()"
   data-test-subj="top-nav"
+  style="min-height: 35px;"
 >
   <!-- Top row -->
-  <div class="kuiLocalNavRow">
+  <div class="kuiLocalNavRow" ng-show="showTimeFilter">
     <!-- Top left corner slot, e.g. breadcrumbs, title. -->
     <div
       class="kuiLocalNavRow__section"
@@ -28,6 +29,7 @@
           tooltip-popup-delay="400"
           tooltip-append-to-body="1"
           data-test-subj="{{menuItem.testId}}"
+          ng-show="kbnTopNav.isVisible()"
         ></div>
 
         <!-- Time-picker "menu item" -->
@@ -49,7 +51,7 @@
     </div>
   </div>
 
-  <div class="kuiLocalNavRow kuiLocalNavRow--secondary">
+  <div class="kuiLocalNavRow kuiLocalNavRow--secondary" ng-show="showSearchBar">
     <!-- Bottom row slot, e.g. tabs. -->
     <div data-transclude-slot="bottomRow"></div>
   </div>
